--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="header">Header</div>
-        <div>Menu</div>
+        <div class="menu">Menu</div>
         <div class="content">Content</div>
         <div class="footer">Footer</div>
     </div>
